# nepal-election-data

./: .gitignore  CLAUDE.md  DASHBOARD_PLAN.md  DEPLOYMENT.md  README.md  app.py  candidata_logic.md  candidate_profile_fetcher.py  candidate_profile_researcher.md  constituency_sample.json  db.py  dim_fptp_candidates_sample.json  election.db  exploration.ipynb  export_to_json.py  fetch_current_candidates.py  get_2074_proportional_election_result.py  get_current_first_past_the_post_candidates.py  get_first_past_the_post_election_result.py  get_parliament_members.py  get_past_proportional_election_result.py  load_raw_data.py  package-lock.json  package.json  parties_dim_logic.md  pnpm-lock.yaml  prataksya_election_result.py  prepare_lean_db.py  pyproject.toml  samanupatik_election_result.py  scrape_party_symbols.py  test_grounding_metadata.py  wrangler.toml
app/: globals.css  layout.tsx  page.tsx
archive/: parse_proportional_candidates_pdf.py
components/: footer.tsx  nav-header.tsx  theme-toggle.tsx
data/: 2074_first_past_the_post_election_result.json  candidate_address_to_district_mapping.json  candidate_addresses.json  constituency.json  current_candidates.json  current_proportional_election_candidates.csv  districts.json  local_bodies.json  parliament_member_manual_matching.csv  parliament_members.json  parliament_members_raw.json  past_2079_first_past_the_post_election_result.json  political_party_symbols.json  unmatched_past_party_names.csv  unmatched_past_party_names_with_suggestions.csv
election/: .user.yml  README.md  dbt_project.yml  election.db  (+2 more)
(+3507 files in other folders)
