[project]
name = "election-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.4",
    "pandas>=1.4.0,<3",
    "playwright>=1.57.0",
    "plotly>=6.5.2",
    "pytest-playwright>=0.7.2"
]

[dependency-groups]
dev = [
    "google-genai>=1.61.0",
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "pypdf2>=3.0.1",
]
